fix: fix button text displaying as blue on iOS

--- a/client/src/customer/style/general.module.css
+++ b/client/src/customer/style/general.module.css
@@ -19,6 +19,7 @@ header {
 button {
     font-family: var(--Lato);
     font-size: 0.8rem;
+    color: black;
 }
 
 article {
